--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="Create, save, and share your crochet patterns with KnottyPatterns - the intuitive pattern builder for crocheters" />
+    <meta name="theme-color" content="#7C3AED" />
+    <meta name="keywords" content="crochet, patterns, amigurumi, pattern maker, crochet designer" />
+    <meta property="og:title" content="KnottyPatterns - Crochet Pattern Builder" />
+    <meta property="og:description" content="Create beautiful crochet patterns with our intuitive pattern builder" />
+    <meta property="og:type" content="website" />
+    <title>KnottyPatterns - Crochet Pattern Builder</title>
   </head>
   <body>
     <div id="root"></div>
