--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <meta name="theme-color" content="#7C3AED" />
     <meta name="keywords" content="crochet, patterns, amigurumi, pattern maker, crochet designer" />
     
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PPDDNW3XRK"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-PPDDNW3XRK');
+    </script>
+    
     <!-- OpenGraph Meta Tags -->
     <meta property="og:title" content="KnottyPatterns - Crochet Pattern Builder" />
     <meta property="og:description" content="Create beautiful crochet patterns with our intuitive pattern builder" />
