--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Create, save, and share your crochet patterns with KnottyPatterns - the intuitive pattern builder for crocheters" />
     <meta name="theme-color" content="#7C3AED" />
-    <meta name="keywords" content="crochet, patterns, amigurumi, pattern maker, crochet designer" />
+    <meta name="keywords" content="crochet, patterns, amigurumi, pattern maker, crochet designer, crochet pattern, crochet pattern generator" />
+    <link rel="canonical" href="https://www.knottypatterns.com/" />
+
     
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-PPDDNW3XRK"></script>
