--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
     <meta name="twitter:image" content="/social-preview.png" />
     <meta name="twitter:domain" content="knottypatterns.com" />
 
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PPDDNW3XRK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PPDDNW3XRK');
+</script>
+
     <!-- Structured Data -->
     <script type="application/ld+json">
     {
