--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="Easily create, save, and share crochet patterns with KnottyPatterns - the ultimate crochet pattern builder." />
+    <meta name="description" content="Easily create, save, and share crochet patterns with Knotty Patterns - the ultimate crochet pattern builder and AI software." />
     <meta name="theme-color" content="#7C3AED" />
 
     <!-- Canonical Tag -->
-    <link rel="canonical" href="https://www.knottypatterns.com/" />
+    <link rel="canonical" href="https://www.knottypatterns.com" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
